--- a/21.html
+++ b/21.html
@@ -1,18 +1,23 @@
 <!DOCTPYPE html>
-<html>
-<head>
-<title> chicken - testpage </title>
-</head>
-</html>
-<h1>chicken</h1>
-<p> The <b>chicken</b> (Gallus gallus domesticus), a subspecies of the red junglefowl, is a type of domesticated fowl. Chickens are one of the most common and widespread domestic animals</p>
-<h2> Terminology </h2>
-<p>Chicken once referred to young domestic fowl in general. The species as a whole was then called domestic fowl, or just fowl.</p>
-<h3>Behavior</h3>
-<h4>Social behaviour</h4>
-<p>Hens will often try to lay in nests that already contain eggs and have been known to move eggs from neighbouring nests into their own</p>
-<h4>Broodiness</h4>
-<p> Under natural conditions, most birds lay only until a clutch is complete, and they will then incubate all the eggs.</p>
+    <html>
+
+    <head>
+        <title> chicken - testpage </title>
+    </head>
 
 
+    <h1>chicken</h1>
+    <p> The <b>chicken</b> (Gallus gallus domesticus), a subspecies of the red junglefowl, is a type of domesticated
+        fowl. Chickens are one of the most common and widespread domestic animals</p>
+    <h2> Terminology </h2>
+    <p>Chicken once referred to young domestic fowl in general. The species as a whole was then called domestic fowl, or
+        just fowl.</p>
+    <h3>Behavior</h3>
+    <h4>Social behaviour</h4>
+    <p>Hens will often try to lay in nests that already contain eggs and have been known to move eggs from neighbouring
+        nests into their own</p>
+    <h4>Broodiness</h4>
+    <p> Under natural conditions, most birds lay only until a clutch is complete, and they will then incubate all the
+        eggs.</p>
 
+    </html>
