--- a/21.html
+++ b/21.html
@@ -19,5 +19,10 @@
     <h4>Broodiness</h4>
     <p> Under natural conditions, most birds lay only until a clutch is complete, and they will then incubate all the
         eggs.</p>
+    <span>display</span>
+    <span>display</span>
+    <span>display</span>
+    <span>display</span>
+    <span>display</span>
 
     </html>
