--- a/21.html
+++ b/21.html
@@ -5,24 +5,40 @@
         <title> chicken - testpage </title>
     </head>
 
+    <body>
 
-    <h1>chicken</h1>
-    <p> The <b>chicken</b> (Gallus gallus domesticus), a subspecies of the red junglefowl, is a type of domesticated
-        fowl. Chickens are one of the most common and widespread domestic animals</p>
-    <h2> Terminology </h2>
-    <p>Chicken once referred to young domestic fowl in general. The species as a whole was then called domestic fowl, or
-        just fowl.</p>
-    <h3>Behavior</h3>
-    <h4>Social behaviour</h4>
-    <p>Hens will often try to lay in nests that already contain eggs and have been known to move eggs from neighbouring
-        nests into their own</p>
-    <h4>Broodiness</h4>
-    <p> Under natural conditions, most birds lay only until a clutch is complete, and they will then incubate all the
-        eggs.</p>
-    <span>display</span>
-    <span>display</span>
-    <span>display</span>
-    <span>display</span>
-    <span>display</span>
+        <h1>chicken</h1>
+        <a href="http://www.google.com">PLEASE CLICK HERE</a>
+        <a href="22.html.">work page</a>
+        <p> The <b>chicken</b> (Gallus gallus domesticus), a subspecies of the red junglefowl, is a type of
+            domesticated
+            fowl. Chickens are one of the most common and widespread domestic animals</p>
+        <h2> Terminology </h2>
+        <p>Chicken once referred to young domestic fowl in general. The species as a whole was then called domestic
+            fowl, or
+            just fowl.</p>
+        <h3>Behavior</h3>
+        <h4>Social behaviour</h4>
+        <p>Hens will often try to lay in nests that already contain eggs and have been known to move eggs from
+            neighbouring
+            nests into their own</p>
+        <h4>Broodiness</h4>
+        <p> Under natural conditions, most birds lay only until a clutch is complete, and they will then incubate
+            all the
+            eggs.</p>
+        <h2>Breeds of chicken</h2>
+        <ul>
+            <li>Gender chicken</li>
+            <ol>
+                <li>male chicken</li>
+                <li>female chicken</li>
+            </ol>
+            <li>Egg chicken</li>
+            <ol>
+                <li>single egg chicken</li>
+                <li>double egg chicken</li>
+            </ol>
+        </ul>
+    </body>
 
     </html>
