fixed href path

--- a/21.html
+++ b/21.html
@@ -9,7 +9,7 @@
 
         <h1>chicken</h1>
         <a href="http://www.google.com">PLEASE CLICK HERE</a>
-        <a href="22.html.">work page</a>
+        <a href="22.html">work page</a>
         <p> The <b>chicken</b> (Gallus gallus domesticus), a subspecies of the red junglefowl, is a type of
             domesticated
             fowl. Chickens are one of the most common and widespread domestic animals</p>
