--- a/21.html
+++ b/21.html
@@ -6,8 +6,8 @@
     </head>
 
     <body>
-
-        <h1>chicken</h1>
+        <h1><b>CHICKENS</b></h1>
+        <img src="D:\wallpaper\CAR &BIKE\3GH.jpg" width="200px" height="200px" alt="nature">
         <a href="http://www.google.com">PLEASE CLICK HERE</a>
         <a href="22.html">work page</a>
         <p> The <b>chicken</b> (Gallus gallus domesticus), a subspecies of the red junglefowl, is a type of
