--- a/21.html
+++ b/21.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1><b>CHICKENS</b></h1>
+        <!--comment line in the list -->
         <img src="D:\wallpaper\CAR &BIKE\3GH.jpg" width="200px" height="200px" alt="nature">
         <a href="http://www.google.com">PLEASE CLICK HERE</a>
         <a href="22.html">work page</a>
