added tags div,span,hr,br,sup,sub,entity,

--- a/21.html
+++ b/21.html
@@ -6,14 +6,25 @@
     </head>
 
     <body>
-        <h1><b>CHICKENS</b></h1>
+        <h1><b>CHICKENS</b> <var>19<sup>th</sup>-feb vasanth&amp;co</var></h1>
+        <hr />
+        <h1>&#x2603;Snowman Productions<sup>&reg;</sup></h1>
+        <ul>
+            <li>There is a <span style=background-color:#f3e0e0;color:red>snowman</span> entity code.</li>
+        </ul>
+        <ul>
+            <li>Use the <span style=background-color:#eedada;color:red>registered trademark</span> entity code</li>
+        </ul>
         <!--comment line in the list -->
         <img src="D:\wallpaper\CAR &BIKE\3GH.jpg" width="200px" height="200px" alt="nature">
         <a href="http://www.google.com">PLEASE CLICK HERE</a>
         <a href="22.html">work page</a>
-        <p> The <b>chicken</b> (Gallus gallus domesticus), a subspecies of the red junglefowl, is a type of
-            domesticated
-            fowl. Chickens are one of the most common and widespread domestic animals</p>
+        <p> The <b>chicken</b> (Gallus gallus domesticus),<sup><a href="http://www.google.com">(10)</a><sub
+                    style="cursor: pointer;">6</sub></sup>
+            <br>a
+            subspecies of thered junglefowl, is a type of domesticated
+            fowl. Chickens are one of the most common and widespread domestic animals
+        </p>
         <h2> Terminology </h2>
         <p>Chicken once referred to young domestic fowl in general. The species as a whole was then called domestic
             fowl, or
