--- a/form.html
+++ b/form.html
@@ -8,19 +8,41 @@
 <body>
     <h1>Form page</h1>
     <form action="/tacos">
+        <button>PLEASE DO NOT SUBMIT THE FORM</button>
         <p>
             <label for="username">enter the username :</label>
-            <input id="username" type="text" placeholder="usernmae">
+            <input id="username" type="text" placeholder="usernmae" name="username">
         </p>
         <p>
             <label for="password">Enter the password : </label>
-            <input id="password" type="password">
+            <input id="password" type="password" name="password">
         </p>
+        <button>IN THE MIDDLE</button>
         <p>
             <label for="color">select the color :</label>
-            <input type="color" id="color">
+            <input type="color" id="color" name="color">
         </p>
-        <input type="month">
+        <p>
+            <label for="number">select the Number :</label>
+            <input type="number" id="color" name="num">
+        </p>
+        <p>
+            <input type="month">
+        </p>
+        <button>submit</button>
+    </form>
+    <hr>
+    <form action="https://www.google.com/search">
+        <input type="text" name="q">
+        <button>search google</button>
+    </form>
+    <form action="https://www.reddit.com/search">
+        <input type="text" name="q">
+        <button>search reddit</button>
+    </form>
+    <form action="https://www.youtube.com/results">
+        <input type="text" name="search_query">
+        <button>search yotube</button>
     </form>
 
 </body>
