--- a/form.html
+++ b/form.html
@@ -44,6 +44,14 @@
         <input type="text" name="search_query">
         <button>search yotube</button>
     </form>
+    <form action="/test">
+        <label for="xs">XS</label>
+        <input type="radio" name="big" id="test1">
+        <label for="s">S</label>
+        <input type="radio" name="big" id="test2">
+        <label for="m">M</label>
+        <input type="radio" name="big" id="test3">
+    </form>
 
 </body>
 
