--- a/21.html
+++ b/21.html
@@ -14,11 +14,25 @@
     </nav>
 
     <body style="padding-left: 100px;">
+        <!-- <style>
+            #test1 {
+                background-color: blue;
+                color: rgb(232, 247, 30);
+                font-size: 22px;
+            }
+
+            .test2 {
+                background-color: cornflowerblue;
+                color: #000;
+                font-size: 14px;
+            }
+        </style> -->
+        <link rel="stylesheet" href="./link1.css" />
         <main>
 
             <h1><b>CHICKENS</b> <var>19<sup>th</sup>-feb vasanth&amp;co</var></h1>
             <hr />
-            <h1>&#x2603;added tagsSnowman Productions<sup>&reg;</sup></h1>
+            <h2>&#x2603;added tagsSnowman Productions<sup>&reg;</sup></h2>
             <ul>
                 <li>There is a <span style=background-color:#f3e0e0;color:red>snowman</span> entity code.</li>
             </ul>
@@ -37,16 +51,34 @@
             </p>
             <h2> Terminology </h2>
             <aside>
-                <p>This hemoglobin also has a greater affinity for oxygen</p>
+                <span id=test1>This hemoglobin also has a greater affinity for oxygen
+                </span>
             </aside>
             <p>Chicken once referred to young domestic fowl in general. The species as a whole was then called domestic
                 fowl, or
                 just fowl.</p>
             <h3>Behavior</h3>
             <h4>Social behaviour</h4>
-            <p>Hens will often try to lay in nests that already contain eggs and have been known to move eggs from
+            <span class=test2>Chickens are one of the most common and widespread domestic animals Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Autem eligendi quisquam animi doloribus provident tempora doloremque
+                earum voluptate hic, cumque vel beatae veritatis, iste itaque omnis, nesciunt dolores. Officiis,
+                molestiae?<br>
+                Facere deserunt culpa doloremque tenetur dignissimos, explicabo amet nulla harum ratione ad eligendi
+                magnam aliquid repellat voluptatem sint molestiae ipsum deleniti quam quae laborum sapiente. Aspernatur
+                tempore ipsum suscipit aperiam!<br>
+                Dolores, quos possimus doloremque dicta perspiciatis sapiente nisi cupiditate laboriosam animi incidunt
+                debitis quaerat reprehenderit suscipit sint omnis tempora eveniet deserunt enim. Tempora illo
+                reprehenderit omnis, ipsam atque ipsa. Error.
+                Libero, est laudantium consequatur in ipsum numquam provident repellat sapiente. Fuga eligendi, sint
+                quidem veniam omnis qui molestiae nam libero velit quasi cum, corrupti consectetur quis cupiditate
+                debitis dolores odit!
+                Qui mollitia modi ut dolorem dolores odio? Ducimus temporibus nulla vero magni molestiae praesentium
+                mollitia voluptatum maiores facere commodi quae voluptas harum accusantium aut rerum, autem dicta
+                tempore rem officia! Hens will often try to lay in nests that already contain eggs and have been known
+                to move
+                eggs from
                 neighbouring
-                nests into their own</p>
+                nests into their own</span>
             <h4>Broodiness</h4>
             <p> Under natural conditions, most birds lay only until a clutch is complete, and they will then incubate
                 all the
