--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
         </p>
         <p>
             <label for="password">Enter the password : </label>
-            <input id="password" type="password" name="password">
+            <input id="password" type="password" placeholder="password" name="password">
         </p>
         <button>IN THE MIDDLE</button>
         <p>
@@ -52,6 +52,14 @@
         <label for="m">M</label>
         <input type="radio" name="big" id="test3">
     </form>
+    <label for="animals">enter the pet name : </label>
+    <select name="animals" id="pets">
+        <option value="pets">--please select the pets</option>
+        <option value="dog">dog</option>
+        <option value="cow">cow</option>
+        <option value="cat">cat</option>
+        <option value="donkey">donkey</option>
+    </select>
 
 </body>
 
